NetBSD Problem Report #49197

From www@NetBSD.org  Fri Sep 12 09:36:11 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E0400CD642
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 12 Sep 2014 09:36:10 +0000 (UTC)
Message-Id: <20140912093609.9C296CD65A@mollari.NetBSD.org>
Date: Fri, 12 Sep 2014 09:36:09 +0000 (UTC)
From: ozaki-r@netbsd.org
Reply-To: ozaki-r@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: A link local address of vlan remains after ifconfig -vlanif
X-Send-Pr-Version: www-1.0

>Number:         49197
>Category:       kern
>Synopsis:       Link local addresses of vlan remain after ifconfig -vlanif
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Sep 12 09:40:00 +0000 2014
>Closed-Date:    Tue Nov 04 09:41:35 +0000 2014
>Last-Modified:  Tue Nov 04 09:41:35 +0000 2014
>Originator:     Ryota Ozaki
>Release:        current
>Organization:
>Environment:
NetBSD kvm 7.99.1 NetBSD 7.99.1 (KVM) #16: Fri Sep 12 17:11:06 JST 2014  ozaki-r@(hidden):(hidden) amd64

>Description:
Read the title and see the below example.
>How-To-Repeat:
kvm# ifconfig vlan0 create
kvm# ifconfig vlan0
vlan0: flags=8802<BROADCAST,SIMPLEX,MULTICAST>
kvm# ifconfig vlan0 vlan 10 vlanif wm0
kvm# ifconfig vlan0 -vlanif wm0
kvm# ifconfig vlan0
vlan0: flags=8802<BROADCAST,SIMPLEX,MULTICAST>
        inet6 fe80::5054:ff:febb:1846%vlan0 prefixlen 64 detached scopeid 0x5

>Fix:
Calling in6_ifdetach in vlan_unconfig would solve the problem.

>Release-Note:

>Audit-Trail:

From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49197 CVS commit: src/sys/net
Date: Mon, 15 Sep 2014 06:07:37 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Sep 15 06:07:37 UTC 2014

 Modified Files:
 	src/sys/net: if_vlan.c

 Log Message:
 Delete link local addresses of a vlan interface when detaching its parent

 This fixes PR 49197.


 To generate a diff of this commit:
 cvs rdiff -u -r1.73 -r1.74 src/sys/net/if_vlan.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Tue, 16 Sep 2014 03:03:43 +0000
State-Changed-Why:
pullup-6 and pullup-7


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49197 CVS commit: [netbsd-6] src
Date: Mon, 3 Nov 2014 20:38:09 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Mon Nov  3 20:38:09 UTC 2014

 Modified Files:
 	src/sbin/ifconfig [netbsd-6]: ifconfig.8 vlan.c
 	src/sys/net [netbsd-6]: if_vlan.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1156):
 	sbin/ifconfig/vlan.c: revision 1.14
 	sbin/ifconfig/ifconfig.8: revision 1.108
 	sys/net/if_vlan.c: revision 1.71
 	sys/net/if_vlan.c: revision 1.73
 	sys/net/if_vlan.c: revision 1.74
 - PR#49114: Write about -vlanif in ifconfig.8.
   Add -vlanif to the help message of ifconfig.
 - PR#49196: Leave promiscuous mode when detaching a parent (ifconfig -vlanif)
   We have to call ifpromisc(ifp, 0) for both a VLAN interface
   and its parent when they are in promiscuous mode.
 - PR#49197: Delete link local addresses of a vlan interface when detaching its
   parent.
 - PR#49112: Restore vlan_ioctl overwritten by ether_ifdetach in vlan_unconfig


 To generate a diff of this commit:
 cvs rdiff -u -r1.104 -r1.104.2.1 src/sbin/ifconfig/ifconfig.8
 cvs rdiff -u -r1.13 -r1.13.8.1 src/sbin/ifconfig/vlan.c
 cvs rdiff -u -r1.69.8.1 -r1.69.8.2 src/sys/net/if_vlan.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Tue, 04 Nov 2014 09:41:35 +0000
State-Changed-Why:
Pulled up. Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.