Delete link local addresses of a vlan interface when detaching its parent

This fixes PR 49197.